# brain2text

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  run_reslstm.sbatch  slurm_backup_cosineDecay30k_120k.sh  slurm_baseline_120k.sh  slurm_stepdrop_120k.sh  test_xlstm.py  tree.txt
assets/lm/: openwebtext_1gram_lm_sil
configs/: rnn_args.yaml  rnn_ctc_baseline.yaml
configs/.ipynb_checkpoints/: rnn_args-checkpoint.yaml
configs/experiments/: gru_lr_warmup_cosine.yaml
configs/run/: gru_lr3e-3_w500.yaml  (+4 more)
logs/: b2t5g_351043.out  b2t5g_351047.err  b2t5g_351047.out  b2t5g_351116.err  b2t5g_351118.err  b2t5g_351119.err  b2t5g_351120.err  b2t5g_351122.err  b2t5g_351125.err  b2t5g_351125.out  b2t5g_351128.err  b2t5g_351128.out  b2t5g_351129.err  b2t5g_351129.out  b2t5g_351281.err  b2t5g_351281.out  b2t5g_351784.err  b2t5g_351784.out  b2t5g_351849.err  b2t5g_351849.out  b2t5g_352233.err  b2t5g_352233.out  b2t5g_352822.err  b2t5g_352822.out  b2t5g_352826.err  b2t5g_352826.out  b2t5g_352827.err  b2t5g_352827.out  b2t5g_352828.err  b2t5g_352828.out  b2t5g_352888.err  b2t5g_352888.out  b2t5g_352889.err  b2t5g_352889.out  b2t5g_352890.err  b2t5g_352890.out  b2t5g_352892.err  b2t5g_352892.out  b2t5g_352897.err  b2t5g_352897.out  (+125 more)
scripts/: run_1gram.sbatch  run_5gram.sbatch  run_experiments.sh  run_xlstm.sbatch  run_xlstm_1gram.sbatch  run_xlstm_train.sbatch  train.py  train.sh  train_baseline_legacy.py  train_ctc.py
slurm/: run_base_opt_yaml.sh  run_sweep_array.sh  run_sweep_gru_dropout_10k.sh  run_sweep_gru_layers_10k.sh  run_sweep_speckleFeat_hiP_10k.sh
(+207 files in other folders)
