[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain2text"
version = "0.1.0"
description = "Brain2Text project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "omegaconf",
  "torch",
  "torchaudio",
  "wandb",
  "h5py",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
