[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain2text"
version = "0.1.0"
description = "Brain2Text training code (project wrapper around NEJM reference)."
requires-python = ">=3.9"
dependencies = [
  "omegaconf",
  "numpy",
  "torch",
  "torchaudio",
  "tqdm",
  "pandas",
  "editdistance",
  "wandb",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
